# Curate-ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
config/: sources.yml
cron/: config.ini
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: init-db.sql
src/curate_ai/: __init__.py  config.py  llm.py  logging.py  pipeline.py  run.py
src/curate_ai/agents/: __init__.py  asset_curator.py  editor.py  insight_generator.py  redundancy_checker.py  relevance_filter.py  schemas.py  source_scout.py
src/curate_ai/db/: __init__.py  models.py  repositories.py  session.py
src/curate_ai/ingestion/: __init__.py  arxiv.py  base.py  manager.py  reddit.py  rss_scraper.py  web_search.py
src/curate_ai/services/: __init__.py  email_service.py  slack_service.py
src/curate_ai/templates/: email_template.html
tests/: __init__.py  test_arxiv.py  test_redundancy_checker.py  test_relevance_filter.py  test_schemas.py  test_web_search.py
